# pasts

./: .gitignore  Objet_st.py  README.md  Series temporelles.py  Series-temporelles.py  pyproject.toml  readme.md  requirements.txt  requirements_doc.txt  requirements_test.txt  setup.py
.github/workflows/: publish.yml  pytest.yml
doc/: conf.py  index.rst
doc/source/: modules.rst  pasts.rst
examples/: ex_model.py  ex_operations.py  ex_saved_models.py
notebooks/: EAtsPy.drawio  EtsPy.drawio  EtsPy_new.drawio  stat_descriptive_serie_temp.ipynb  test_dlm_ssm.ipynb
src/: main.py  signal.py  tools_st.py
src/PASTS/examples/: ex_model.py
src/PASTS/signal/: __init__.py  metrics.py  model.py  signal.py
src/pasts/: __init__.py  metrics.py  model.py  operations.py  signal.py  statistical_tests.py  test_operations.py  test_statistiques.py  validation.py  visualization.py
src/seriesTemporelles/: main.py
src/seriesTemporelles/signals/: __init__.py  multiSignals.py  multiVariates.py  signal_abs.py  uniSignal.py  uniVariate.py
src/seriesTemporelles/test/: test_statistiques.py
src/seriestemporelles/: __init__.py  main.py
src/seriestemporelles/examples/: ex_model.py  ex_multivariate_model.py  test_statistiques.py
src/seriestemporelles/signal/: __init__.py  metrics.py  model.py  multiVariates.py  proporties_signal.py  signal.py  signal_abstract.py  signal_analysis.py  test_statistiques.py  uniVariate.py  validation.py  visualization.py
src/seriestemporelles/signals/: __init__.py  multiVariates.py  uniVariate.py
src/seriestemporelles/test/: test_multivariate_model.py  test_statistiques.py  test_univariate_model.py
test_rawya/: signal_.py  tools_st.py
tests/: __init__.py  conftest.py  test_operations.py  test_signal.py  test_visualization.py
